--- a/.github/workflows/unittests.yml
+++ b/.github/workflows/unittests.yml
@@ -16,7 +16,7 @@
      strategy:
        matrix:
          os: ['macos-latest', 'ubuntu-latest', 'windows-latest']
-         environment-file: [ci/envs/36-PYPI.yaml, ci/envs/36-PYPI-PLUS.yaml, ci/envs/36-GIT.yaml, ci/envs/36-GIT-PLUS.yaml, ci/envs/37-PYPI.yaml, ci/envs/37-PYPI-PLUS.yaml, ci/envs/37-GIT.yaml, ci/envs/37-GIT-PLUS.yaml, ci/envs/38-PYPI.yaml, ci/envs/38-PYPI-PLUS.yaml, ci/envs/38-GIT.yaml, ci/envs/38-GIT-PLUS.yaml]
+         environment-file: [ci/envs/38-PYPI.yaml, ci/envs/38-PYPI-PLUS.yaml, ci/envs/38-GIT.yaml, ci/envs/38-GIT-PLUS.yaml]
      steps:
        - uses: actions/checkout@v2
        - uses: goanpeca/setup-miniconda@v1
