--- a/.github/workflows/unittests.yml
+++ b/.github/workflows/unittests.yml
@@ -15,7 +15,7 @@
      strategy:
        matrix:
          #os: ['macos-latest', 'ubuntu-latest', 'windows-latest']
-         os: ['ubuntu-latest'] 
+         os: ['macos-latest'] 
          environment-file: [ci/envs/38-PYPI.yaml, ci/envs/38-PYPI-PLUS.yaml, ci/envs/38-GIT.yaml, ci/envs/38-GIT-PLUS.yaml]
      steps:
        - uses: actions/checkout@v2
