--- a/.github/workflows/unittests.yml
+++ b/.github/workflows/unittests.yml
@@ -15,15 +15,11 @@
      strategy:
        matrix:
          #os: ['macos-latest', 'ubuntu-latest', 'windows-latest']
-         os: ['macos-latest'] 
+         os: ['windows-latest'] 
          environment-file: [ci/envs/38-PYPI.yaml, ci/envs/38-PYPI-PLUS.yaml, ci/envs/38-GIT.yaml, ci/envs/38-GIT-PLUS.yaml]
      steps:
        - uses: actions/checkout@v2
-       - name: Clear freespace
-         run: |
-            sudo rm -rf /usr/share/dotnet
-            sudo rm -rf /opt/ghc
-            df -h
+      
        - uses: goanpeca/setup-miniconda@v1
          with:
             miniconda-version: 'latest'
